fixed feedback loop where produce stretching viewport caused harder produce throwing causing more viewport stretching

--- a/fruity.css
+++ b/fruity.css
@@ -25,6 +25,7 @@ html {
 	height:100vh;
 	width:100vw;
 	z-index:0;
+	overflow: hidden;
 }
 
 #background {
